EN version final

--- a/TDR-Duty-Drawback-in-the-US.html
+++ b/TDR-Duty-Drawback-in-the-US.html
@@ -174,7 +174,9 @@
 
 </head>
 
-<body class="stretched darkBlue-background page-transition" data-loader="2" data-animation-in="fadeIn" data-speed-in="1500" data-animation-out="fadeOut" data-speed-out="800">  <div id="wrapper">
+<body class="stretched darkBlue-background page-transition" data-loader="2" data-animation-in="fadeIn"
+  data-speed-in="1500" data-animation-out="fadeOut" data-speed-out="800">
+  <div id="wrapper">
     <!-- Only Required if Icons are shown on page -->
 <!-- Font Icons Start -->
 <link rel="preload" href="./css/font-icons.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
@@ -278,22 +280,22 @@
               <ul class="sub-menu-container">
                 <li class="menu-item">
                   <a class="menu-link" href="TDR-Duty-Drawback-in-the-US.html">
-                    <div>Duty Drawback in the US</div>
+                    <div>TDR US Duty Drawback</div>
                   </a>
                 </li>
                 <li class="menu-item">
                   <a class="menu-link" href="TDR-Duty-Drawback-in-Europe.html">
-                    <div>Duty Drawback in Europe</div>
+                    <div>TDR Europe Duty Drawback</div>
                   </a>
                 </li>
                 <li class="menu-item">
                   <a class="menu-link" href="TDR-Duty-Free-Returns-to-the-US.html">
-                    <div>Duty-Free Returns to the US</div>
+                    <div>TDR Duty-Free Returns to the US</div>
                   </a>
                 </li>
                 <li class="menu-item">
                   <a class="menu-link" href="TDR-Duty-Free-Returns-to-Europe.html">
-                    <div>Duty-Free Returns to Europe</div>
+                    <div>TDR Duty-Free Returns to Europe</div>
                   </a>
                 </li>
               </ul>
@@ -475,20 +477,15 @@
               </div>
 
               <div class="col-lg-6 align-self-center">
-                <h1 class="h1 fw-semibold lh-X mb-5">Reclaim duties, taxes, fees, and tariffs paid to U.S. Customs for
-                  merchandise imported into the United States that is later exported or destroyed.</h1>
-
+                <h1 class="h1 fw-semibold lh-X mb-5">Reclaim duties, taxes, fees, and tariffs paid to U.S. Customs for merchandise imported into the United States that is later exported or destroyed.</h1>
               </div>
             </div>
-
           </div>
-
         </div>
         <!-- Feature boxes start -->
 
         <div class="container">
           <div class="css-grid">
-
             <!-- Card 1-->
             <div class="flip-card-2">
               <div class="flip-card-2-inner">
@@ -499,12 +496,10 @@
                   </div>
                 </div>
                 <div class="back">
-                  <p>Drawback is the refund of certain duties, internal revenue taxes and certain fees collected upon
-                    the importation of goods and refunded when the merchandise is exported or destroyed.</p>
+                  <p>Drawback is the refund of certain duties, internal revenue taxes and certain fees collected upon the importation of goods and refunded when the merchandise is exported or destroyed.</p>
                 </div>
               </div>
             </div>
-
             <!-- Card 2-->
             <div class="flip-card-2">
               <div class="flip-card-2-inner">
@@ -517,27 +512,14 @@
                 <div class="back">
                   <span class="lead text-left">Eligible merchandise are</span>
                   <ul class="card-ul">
-                    <li>
-                      Merchandise imported and used in the production or manufacturing of another item that is later
-                      exported.
-                    </li>
-                    <li>
-                      Merchandise that is imported but remains unused.
-                    </li>
-                    <li>
-                      Merchandise that is either directly imported or substituted with a product of the same quality and
-                      type as the imported item, which is used in the final product.
-                    </li>
-                    <li>
-                      Merchandise rejected by the consignee due to quality issues, failure to match the sample or
-                      specifications, or shipment without the consignee’s consent.
-                    </li>
+                    <li>Merchandise imported and used in the production or manufacturing of another item that is later exported.</li>
+                    <li>Merchandise that is imported but remains unused.</li>
+                    <li>Merchandise that is either directly imported or substituted with a product of the same quality and type as the imported item, which is used in the final product.</li>
+                    <li>Merchandise rejected by the consignee due to quality issues, failure to match the sample or specifications, or shipment without the consignee’s consent.</li>
                   </ul>
-
                 </div>
               </div>
             </div>
-
             <!-- Card 3-->
             <div class="flip-card-2">
               <div class="flip-card-2-inner">
@@ -548,9 +530,7 @@
                   </div>
                 </div>
                 <div class="back">
-                  <p>To be eligible for duty drawback claims, you must be the original importer of record for the
-                    exported product, have paid the relevant duties and taxes, retain possession of the exported
-                    merchandise, or provide sufficient evidence proving that the merchandise was exported.</p>
+                  <p>To be eligible for duty drawback claims, you must be the original importer of record for the exported product, have paid the relevant duties and taxes, retain possession of the exported merchandise, or provide sufficient evidence proving that the merchandise was exported.</p>
                 </div>
               </div>
             </div>
@@ -565,9 +545,7 @@
                   </div>
                 </div>
                 <div class="back">
-                  <p>You may recover up to 99% of the duties, taxes, and/or fees paid on imported merchandise if it
-                    remains unused, is exported, is manufactured into another product and then exported, or is destroyed
-                    under the supervision of CBP or customs authorities.</p>
+                  <p>You may recover up to 99% of the duties, taxes, and/or fees paid on imported merchandise if it remains unused, is exported, is manufactured into another product and then exported, or is destroyed under the supervision of CBP or customs authorities.</p>
                 </div>
               </div>
             </div>
@@ -578,17 +556,11 @@
                 <div class="front">
                   <div class="text-wrapper">
                     <i class="bi-arrow-left-right h1 mb-2"></i>
-                    <h3 class="card-title">I import eCom orders that sometimes are returned by buyers. Can I reclaim
-                      import
-                      Duties?</h3>
+                    <h3 class="card-title">I import eCom orders that sometimes are returned by buyers. Can I reclaim import Duties?</h3>
                   </div>
                 </div>
                 <div class="back">
-                  <p>Yes, it is possible to reclaim customs duties under the Duty Drawback program in the US, provided
-                    certain conditions are met. Specifically, the item must have been exported from the US, and all
-                    relevant documentation, including track-and-trace events and commercial records, must be available.
-                    Additionally, both the import and export declarations need to include detailed information about the
-                    item. Meeting these requirements will allow you to proceed with the Duty Drawback claim.</p>
+                  <p>Yes, it is possible to reclaim customs duties under the Duty Drawback program in the US, provided certain conditions are met. Specifically, the item must have been exported from the US, and all relevant documentation, including track-and-trace events and commercial records, must be available. Additionally, both the import and export declarations need to include detailed information about the item. Meeting these requirements will allow you to proceed with the Duty Drawback claim.</p>
                 </div>
               </div>
             </div>
@@ -607,19 +579,12 @@
                   <ul class="card-ul">
                     <li>
                       <strong>Direct Identification</strong>:<br>
-                      This method requires tracking specific imported merchandise from importation to exportation or
-                      destruction using a unique identifier, such as a serial number, lot number, or batch number.
-                      Alternatively, an approved accounting method can be used, provided it meets the required criteria.
+                      This method requires tracking specific imported merchandise from importation to exportation or destruction using a unique identifier, such as a serial number, lot number, or batch number. Alternatively, an approved accounting method can be used, provided it meets the required criteria.
                     </li>
                     <li>
                       <strong>Substitution</strong>:<br>
-                      This method allows substituting imported merchandise with similar items classified under the same
-                      tariff classification. The substituted and designated merchandise must share the same 8-digit
-                      tariff number. If the tariff number’s article description starts with “Other,” the merchandise
-                      must be classified under the same 10-digit tariff number, provided the statistical suffix (last
-                      two digits) does not also begin with “Other”
+                      This method allows substituting imported merchandise with similar items classified under the same tariff classification. The substituted and designated merchandise must share the same 8-digit tariff number. If the tariff number’s article description starts with 'Other,' the merchandise must be classified under the same 10-digit tariff number, provided the statistical suffix (last two digits) does not also begin with 'Other.'
                     </li>
-
                   </ul>
                 </div>
               </div>
@@ -636,12 +601,8 @@
                   </div>
                 </div>
                 <div class="back">
-                  <p>As your trusted broker in the US, TDR ensures a seamless and integrated duty drawback process.
-                    Additionally, by supporting your operations globally, TDR facilitates duty drawback and duty-free
-                    importation worldwide, helping you reclaim duties at every possible point in your supply chain.
-                    Discover <a class="text-decoration-underline" href="https://tradedutyrefund.com/">more ways TDR can
-                      enhance your cash flow</a> and benefit
-                    your organization.
+                  <p>As your trusted broker in the US, TDR ensures a seamless and integrated duty drawback process. Additionally, by supporting your operations globally, TDR facilitates duty drawback and duty-free importation worldwide, helping you reclaim duties at every possible point in your supply chain. Discover <a class="text-decoration-underline"
+                      href="https://tradedutyrefund.com/">more ways TDR can enhance your cash flow</a> and benefit your organization.
                   </p>
                 </div>
               </div>
@@ -681,52 +642,51 @@
             <div class="heading-block border-bottom-0 mb-3">
               <h2 class="text-darkBlue">How Seamless Duty Refund Works</h2>
             </div>
-            <p class="text-muted mb-0">Reclaim what’s yours – Effortlessly recover Customs duties with Trade
-              Duty
-              Refund.</p>
+            <p class="text-muted mb-0">Reclaim what’s yours – Effortlessly recover Customs duties with Trade Duty Refund.</p>
           </div>
         </div>
         <div class="clear"></div>
         <div class="row justify-content-around">
           <div class="col-lg-3 col-md-4 mt-5">
             <div class="feature-text">
-              <div class="fbox-text text-darkBlue">1.</div>
+              <div class="fbox-text text-darkBlue">1</div>
               <h3 class="text-darkBlue">Choose TDR as Your Broker of Choice.</h3>
             </div>
             <p>Inform your current carriers to designate TDR as your preferred export and import broker.</p>
           </div>
           <div class="col-lg-3 col-md-4 mt-5">
             <div class="feature-text">
-              <div class="fbox-text text-darkBlue">2.</div>
+              <div class="fbox-text text-darkBlue">2</div>
               <h3 class="text-darkBlue">We Handle Carrier Connections.</h3>
             </div>
-            <p>If not already linked with your carrier, TDR will establish the necessary data exchange to manage
-              clearances.</p>
+            <p>If not already linked with your carrier, TDR will establish the necessary data exchange to manage clearances.</p>
           </div>
           <div class="col-lg-3 col-md-4 mt-5">
             <div class="feature-text">
-              <div class="fbox-text text-darkBlue">3.</div>
+              <div class="fbox-text text-darkBlue">3</div>
               <h3 class="text-darkBlue">Keep Shipping – We Do the Rest.</h3>
             </div>
-            <p>Ship as usual while TDR manages inbound and outbound clearances, reclaiming duties at every
-              opportunity.</p>
+            <p>Ship as usual while TDR manages inbound and outbound clearances, reclaiming duties at every opportunity.</p>
           </div>
         </div>
       </div>
     </div>
 </section>
 
-    </section><!-- #content end -->
+    </section>
+    <!-- #content end -->
     <section id="content">
   <div class="content-wrap">
     <div class="container">
 
       <div class="promo shadow-sm text-center p-5 p-md-6 border rounded-5 mb-5">
-        <h2 class="mb-1 h2">Eager to start saving big?</span></h2>
+        <h2 class="mb-1 h2">Eager to start saving big?</h2>
         <h3 class="mb-4 fw-medium">You're just one click away.</h3>
-        <a href="send-us-a-message.html" class="button button-large button-rounded text-white">Send Us A
+        <div class="btn-group" role="group" aria-label="Contact Us Button Group" <a href="send-us-a-message.html"
+          class="button button-large button-rounded text-white">Send Us A
           Message</a>
-        <a href="make-an-appointment.html" class="button button-large button-rounded text-white">Let's Talk!</a>
+          <a href="make-an-appointment.html" class="button button-large button-rounded text-white">Let's Talk!</a>
+        </div>
       </div>
 
     </div>
@@ -737,6 +697,7 @@
   #footer {
     --cnvs-socialicon-color: @@text-color;
     --cnvs-footer-bg: var(--darkBlue);
+    z-index: 10;
   }
 
   .dark #copyrights,
