--- a/TDR-Duty-Free-Returns-to-the-US.html
+++ b/TDR-Duty-Free-Returns-to-the-US.html
@@ -281,22 +281,22 @@
               <ul class="sub-menu-container">
                 <li class="menu-item">
                   <a class="menu-link" href="TDR-Duty-Drawback-in-the-US.html">
-                    <div>Duty Drawback in the US</div>
+                    <div>TDR US Duty Drawback</div>
                   </a>
                 </li>
                 <li class="menu-item">
                   <a class="menu-link" href="TDR-Duty-Drawback-in-Europe.html">
-                    <div>Duty Drawback in Europe</div>
+                    <div>TDR Europe Duty Drawback</div>
                   </a>
                 </li>
                 <li class="menu-item">
                   <a class="menu-link" href="TDR-Duty-Free-Returns-to-the-US.html">
-                    <div>Duty-Free Returns to the US</div>
+                    <div>TDR Duty-Free Returns to the US</div>
                   </a>
                 </li>
                 <li class="menu-item">
                   <a class="menu-link" href="TDR-Duty-Free-Returns-to-Europe.html">
-                    <div>Duty-Free Returns to Europe</div>
+                    <div>TDR Duty-Free Returns to Europe</div>
                   </a>
                 </li>
               </ul>
@@ -384,9 +384,7 @@
     <section id="content" class="grey-background">
       <div class="content-wrap">
         <div class="container">
-
           <div class="block-hero-25">
-
             <div class="row align-items-lg-center gutter-50">
               <div class="col-lg-6">
                 <svg width="100%"viewBox="0 0 618.78137 112.40881" version="1.1"
@@ -475,34 +473,29 @@ Warehouse" id="text8670"
   startAnimation()
 </script>
               </div>
-
               <div class="col-lg-6 align-self-center">
-                <h1 class="h1 fw-semibold lh-X mb-5 text-white">Reduce the impact of e-commerce return costs.</h1>
+                <h1 class="h1 fw-semibold lh-X mb-5 text-white">
+                  Reduce the impact of e-commerce return costs.
+                </h1>
               </div>
             </div>
           </div>
         </div>
         <!-- Feature boxes start -->
-
         <div class="container">
           <div class="css-grid">
-
             <!-- Card 1-->
             <div class="flip-card-2">
               <div class="flip-card-2-inner">
                 <div class="front">
                   <div class="text-wrapper">
                     <i class="bi-question-circle h1 mb-2"></i>
-                    <h3 class="card-title">What is TDR Duty-Free Returns to the US</h3>
+                    <h3 class="card-title">What is
+                      TDR Duty-Free Returns to the US</h3>
                   </div>
                 </div>
                 <div class="back">
-                  <p>TDR Duty-Free Returns to the US allows businesses to reclaim goods that were previously
-                    exported
-                    without having to pay import duties upon their return. Essentially, if goods sold internationally
-                    are returned, they can re-enter the US duty-free under certain conditions.
-                    This process simplifies returns for merchants, reducing financial losses and administrative burdens.
-                  </p>
+                  <p>TDR Duty-Free Returns to the US allows businesses to reclaim goods that were previously exported without having to pay import duties upon their return. Essentially, if goods sold internationally are returned, they can re-enter the US duty-free under certain conditions. This process simplifies returns for merchants, reducing financial losses and administrative burdens.</p>
                 </div>
               </div>
             </div>
@@ -513,23 +506,29 @@ Warehouse" id="text8670"
                 <div class="front">
                   <div class="text-wrapper">
                     <i class="bi-bag-fill h1 mb-2"></i>
-                    <h3 class="card-title">What qualifies for duty free returns</h3>
+                    <h3 class="card-title">What qualifies for duty-free returns</h3>
                   </div>
                 </div>
                 <div class="back">
                   To qualify for duty-free returns, goods must meet the following criteria:
                   <ul class="card-ul">
-                    <li><strong>Previously exported goods:</strong> The items must have been originally exported from
-                      the US.</li>
-                    <li><strong>Unaltered condition:</strong> The goods should be returned in the same condition as when
-                      exported, meaning no repairs or modifications were made while abroad</li>
-                    <li><strong>Ownership continuity:</strong> The goods must remain under the ownership of the same
-                      entity that originally exported them.</li>
-                    <li><strong>Time Limit:</strong> Goods must return to the US within 3 years. Goods that were
-                      manufactured in the US do not fall under that condition and can be returned duty free without time
-                      limit.</li>
-                    Examples include:Unused clothing returned to online fashion retailers, consumer electronics returned
-                    due to buyer dissatisfaction or wrong orders, defective goods sent back for replacement.
+                    <li>
+                      <strong>Previously exported goods:</strong>
+                      The items must have been originally exported from the US.
+                    </li>
+                    <li>
+                      <strong>Unaltered condition:</strong>
+                      The goods should be returned in the same condition as when exported, meaning no repairs or modifications were made while abroad.
+                    </li>
+                    <li>
+                      <strong>Ownership continuity:</strong>
+                      The goods must remain under the ownership of the same entity that originally exported them.
+                    </li>
+                    <li>
+                      <strong>Time Limit:</strong>
+                      Goods must return to the US within 3 years. Goods that were manufactured in the US do not fall under that condition and can be returned duty-free without a time limit.
+                    </li>
+                    Examples include: Unused clothing returned to online fashion retailers, consumer electronics returned due to buyer dissatisfaction or wrong orders, defective goods sent back for replacement.
                   </ul>
                 </div>
               </div>
@@ -541,26 +540,28 @@ Warehouse" id="text8670"
                 <div class="front">
                   <div class="text-wrapper">
                     <i class="bi-people-fill h1 mb-2"></i>
-                    <h3 class="card-title">Who qualifies for duty free returns</h3>
+                    <h3 class="card-title">Who qualifies for duty-free returns</h3>
                   </div>
                 </div>
                 <div class="back">
                   TDR Duty-Free Returns to the US is particularly beneficial for:
                   <ul class="card-ul">
-                    <li><strong>eCommerce merchants:</strong> Businesses selling goods internationally can avoid
-                      additional taxes on returned
-                      items.</li>
-                    <li> <strong>Third-party logistics providers (3PLs):</strong> Companies managing returns for
-                      merchants can streamline their
-                      customs process.
+                    <li>
+                      <strong>eCommerce merchants:</strong>
+                      Businesses selling goods internationally can avoid additional taxes on returned items.
                     </li>
-                    <li> <strong>Retailers and exporters:</strong> Any company exporting goods that might be returned by
-                      customers.
+                    <li>
+                      <strong>Third-party logistics providers (3PLs):</strong>
+                      Companies managing returns for merchants can streamline their customs process.
+                    </li>
+                    <li>
+                      <strong>Retailers and exporters:</strong>
+                      Any company exporting goods that might be returned by customers.
                     </li>
                   </ul>
-                  As a US-based business selling and shipping to global buyers,
-                  TDR Duty-Free Returns to the US helps protect your profit margins when returns
-                  occur.
+                  <p>
+                    As a US-based business selling and shipping to global buyers, TDR Duty-Free Returns to the US helps protect your profit margins when returns occur.
+                  </p>
                 </div>
               </div>
             </div>
@@ -578,22 +579,19 @@ Warehouse" id="text8670"
                   <ul class="card-ul">
                     <li>
                       <strong>Scenario:</strong>
-                      A US-based eCommerce store sells luxury handbags internationally. A customer in France purchases a
-                      handbag but returns it because the color wasn’t what they expected.
+                      A US-based eCommerce store sells luxury handbags internationally. A customer in France purchases a handbag but returns it because the color wasn’t what they expected.
                     </li>
-                    <li><strong>Without our solution:</strong>
-                      Upon re-entry to the US, the merchant might need to pay import duties and VAT on the handbag—even
-                      though it was already exported from the US.
+                    <li>
+                      <strong>Without our solution:</strong>
+                      Upon re-entry to the US, the merchant might need to pay import duties and VAT on the handbag—even though it was already exported from the US.
                     </li>
-                    <li><strong>With TDR Duty-Free Returns to the US:</strong>
-                      The merchant's broker applies for duty-free returns under HTS 9801.00.10. They will need to
-                      provide proof of the original export (e.g., commercial invoice
-                      and shipping documents). Customs verifies the documentation and allows the handbag to re-enter
-                      duty-free.
+                    <li>
+                      <strong>With
+                        TDR Duty-Free Returns to the US:</strong>
+                      The merchant's broker applies for duty-free returns under HTS 9801.00.10. They will need to provide proof of the original export (e.g., commercial invoice and shipping documents). Customs verifies the documentation and allows the handbag to re-enter duty-free.
                     </li>
                     <strong>Result:</strong>
-                    The merchant avoids paying unnecessary taxes, ensuring a smoother returns process and preserving
-                    profitability.
+                    The merchant avoids paying unnecessary taxes, ensuring a smoother returns process and preserving profitability.
                   </ul>
                 </div>
               </div>
@@ -610,23 +608,19 @@ Warehouse" id="text8670"
                   </div>
                 </div>
                 <div class="back">
-                  <p>As your trusted broker in the EU and the UK, TDR ensures a seamless and integrated duty free return
-                    process. <br>
-                    Specifically, we keep clear records of exports, including commercial invoices and shipping documents
-                    and
-                    submit a claim with customs when goods are returned, demonstrating they meet the eligibility
-                    criteria.<br><br>
-                    Additionally, by supporting your operations globally, TDR facilitates duty drawback and duty-free
-                    importation worldwide, helping you reclaim duties at every possible point in your supply chain.
-                    Discover <a class="text-decoration-underline" href="https://tradedutyrefund.com/">more ways TDR can
-                      enhance your cash flow</a> and benefit
-                    your organization.
+                  <p>
+                    As your trusted broker in the EU and the UK, TDR ensures a seamless and integrated duty-free return process.<br><br>
+                    Specifically, we keep clear records of exports, including commercial invoices and shipping documents, and submit a claim with customs when goods are returned, demonstrating they meet the eligibility criteria.<br><br>Additionally, by supporting your operations globally, TDR facilitates duty drawback and duty-free importation worldwide, helping you reclaim duties at every possible point in your supply chain. Discover
+                    <a class="text-decoration-underline"
+                      href="https://tradedutyrefund.com/">more ways TDR can enhance your cash flow</a>
+                    and benefit your organization.
                   </p>
                 </div>
               </div>
             </div>
           </div>
-        </div> <style>
+        </div>
+        <style>
   .seamlessDD .fbox-text {
     font-size: 58px;
     line-height: 1;
@@ -659,52 +653,50 @@ Warehouse" id="text8670"
             <div class="heading-block border-bottom-0 mb-3">
               <h2 class="text-darkBlue">How Seamless Duty Refund Works</h2>
             </div>
-            <p class="text-muted mb-0">Reclaim what’s yours – Effortlessly recover Customs duties with Trade
-              Duty
-              Refund.</p>
+            <p class="text-muted mb-0">Reclaim what’s yours – Effortlessly recover Customs duties with Trade Duty Refund.</p>
           </div>
         </div>
         <div class="clear"></div>
         <div class="row justify-content-around">
           <div class="col-lg-3 col-md-4 mt-5">
             <div class="feature-text">
-              <div class="fbox-text text-darkBlue">1.</div>
+              <div class="fbox-text text-darkBlue">1</div>
               <h3 class="text-darkBlue">Choose TDR as Your Broker of Choice.</h3>
             </div>
             <p>Inform your current carriers to designate TDR as your preferred export and import broker.</p>
           </div>
           <div class="col-lg-3 col-md-4 mt-5">
             <div class="feature-text">
-              <div class="fbox-text text-darkBlue">2.</div>
+              <div class="fbox-text text-darkBlue">2</div>
               <h3 class="text-darkBlue">We Handle Carrier Connections.</h3>
             </div>
-            <p>If not already linked with your carrier, TDR will establish the necessary data exchange to manage
-              clearances.</p>
+            <p>If not already linked with your carrier, TDR will establish the necessary data exchange to manage clearances.</p>
           </div>
           <div class="col-lg-3 col-md-4 mt-5">
             <div class="feature-text">
-              <div class="fbox-text text-darkBlue">3.</div>
+              <div class="fbox-text text-darkBlue">3</div>
               <h3 class="text-darkBlue">Keep Shipping – We Do the Rest.</h3>
             </div>
-            <p>Ship as usual while TDR manages inbound and outbound clearances, reclaiming duties at every
-              opportunity.</p>
+            <p>Ship as usual while TDR manages inbound and outbound clearances, reclaiming duties at every opportunity.</p>
           </div>
         </div>
       </div>
     </div>
 </section>
-
-    </section><!-- #content end -->
+    </section>
+    <!-- #content end -->
     <section id="content">
   <div class="content-wrap">
     <div class="container">
 
       <div class="promo shadow-sm text-center p-5 p-md-6 border rounded-5 mb-5">
-        <h2 class="mb-1 h2">Eager to start saving big?</span></h2>
+        <h2 class="mb-1 h2">Eager to start saving big?</h2>
         <h3 class="mb-4 fw-medium">You're just one click away.</h3>
-        <a href="send-us-a-message.html" class="button button-large button-rounded text-white">Send Us A
+        <div class="btn-group" role="group" aria-label="Contact Us Button Group" <a href="send-us-a-message.html"
+          class="button button-large button-rounded text-white">Send Us A
           Message</a>
-        <a href="make-an-appointment.html" class="button button-large button-rounded text-white">Let's Talk!</a>
+          <a href="make-an-appointment.html" class="button button-large button-rounded text-white">Let's Talk!</a>
+        </div>
       </div>
 
     </div>
@@ -715,6 +707,7 @@ Warehouse" id="text8670"
   #footer {
     --cnvs-socialicon-color: @@text-color;
     --cnvs-footer-bg: var(--darkBlue);
+    z-index: 10;
   }
 
   .dark #copyrights,
