--- a/make-an-appointment.html
+++ b/make-an-appointment.html
@@ -196,22 +196,22 @@
               <ul class="sub-menu-container">
                 <li class="menu-item">
                   <a class="menu-link" href="TDR-Duty-Drawback-in-the-US.html">
-                    <div>Duty Drawback in the US</div>
+                    <div>TDR US Duty Drawback</div>
                   </a>
                 </li>
                 <li class="menu-item">
                   <a class="menu-link" href="TDR-Duty-Drawback-in-Europe.html">
-                    <div>Duty Drawback in Europe</div>
+                    <div>TDR Europe Duty Drawback</div>
                   </a>
                 </li>
                 <li class="menu-item">
                   <a class="menu-link" href="TDR-Duty-Free-Returns-to-the-US.html">
-                    <div>Duty-Free Returns to the US</div>
+                    <div>TDR Duty-Free Returns to the US</div>
                   </a>
                 </li>
                 <li class="menu-item">
                   <a class="menu-link" href="TDR-Duty-Free-Returns-to-Europe.html">
-                    <div>Duty-Free Returns to Europe</div>
+                    <div>TDR Duty-Free Returns to Europe</div>
                   </a>
                 </li>
               </ul>
@@ -284,15 +284,12 @@
 		<section class="page-title bg-transparent border-0 pb-0">
 			<div class="container">
 				<div class="page-title-row pt-5 pb-3">
-
 					<div class="page-title-content">
 						<span class="text-lightSamaritan fw-medium my-0">Discover Your Savings Potential!</span>
 						<h1>
 							<div class="fw-bold display-5">Make An Appointment</div>
 						</h1>
-						<span class="fw-light" style="max-width: 40rem;">Schedule a consultation with our Customs experts to explore
-							opportunities to reclaim duties globally. Learn how Trade Duty Refund can help your eCommerce business
-							save money and unlock untapped value. Let’s quantify the benefits together—your savings start here!</span>
+						<span class="fw-light" style="max-width: 40rem;">Schedule a consultation with our Customs experts to explore opportunities to reclaim duties globally. Learn how Trade Duty Refund can help your eCommerce business save money and unlock untapped value. Let’s quantify the benefits together—your savings start here!</span>
 					</div>
 				</div>
 			</div>
@@ -313,6 +310,7 @@
   #footer {
     --cnvs-socialicon-color: @@text-color;
     --cnvs-footer-bg: var(--samaritan);
+    z-index: 10;
   }
 
   .dark #copyrights,
