--- a/TDR-Duty-Drawback-in-Europe.html
+++ b/TDR-Duty-Drawback-in-Europe.html
@@ -280,22 +280,22 @@
               <ul class="sub-menu-container">
                 <li class="menu-item">
                   <a class="menu-link" href="TDR-Duty-Drawback-in-the-US.html">
-                    <div>Duty Drawback in the US</div>
+                    <div>TDR US Duty Drawback</div>
                   </a>
                 </li>
                 <li class="menu-item">
                   <a class="menu-link" href="TDR-Duty-Drawback-in-Europe.html">
-                    <div>Duty Drawback in Europe</div>
+                    <div>TDR Europe Duty Drawback</div>
                   </a>
                 </li>
                 <li class="menu-item">
                   <a class="menu-link" href="TDR-Duty-Free-Returns-to-the-US.html">
-                    <div>Duty-Free Returns to the US</div>
+                    <div>TDR Duty-Free Returns to the US</div>
                   </a>
                 </li>
                 <li class="menu-item">
                   <a class="menu-link" href="TDR-Duty-Free-Returns-to-Europe.html">
-                    <div>Duty-Free Returns to Europe</div>
+                    <div>TDR Duty-Free Returns to Europe</div>
                   </a>
                 </li>
               </ul>
@@ -379,7 +379,7 @@
     </section><!-- .page-title end -->
 
     <!-- Content
-		============================================= -->
+      ============================================= -->
     <section id="content" class="darkBlue-background">
       <div class="content-wrap">
         <div class="container">
@@ -474,10 +474,7 @@
               </div>
 
               <div class="col-lg-6 align-self-center">
-                <h1 class="h1 fw-semibold lh-X mb-5">Reclaim duties, taxes, fees, and tariffs paid to EU and UK Customs
-                  for
-                  merchandise imported that is later exported.</h1>
-
+                <p class="h1 fw-semibold lh-X mb-5">Reclaim duties, taxes, fees, and tariffs paid to EU and UK Customs for merchandise imported that is later exported.</p>
               </div>
             </div>
 
@@ -499,10 +496,7 @@
                   </div>
                 </div>
                 <div class="back">
-                  <p>Duty drawback refers to the process of reclaiming duties and taxes on imported goods in the EU or
-                    the UK that are subsequently re-exported within three months without being used. This process is
-                    designed to support businesses engaged in international trade by reducing unnecessary costs when
-                    goods are not retained in the importing country.</p>
+                  <p>Duty drawback refers to the process of reclaiming duties and taxes on imported goods in the EU or the UK that are subsequently re-exported within three months without being used. This process is designed to support businesses engaged in international trade by reducing unnecessary costs when goods are not retained in the importing country.</p>
                 </div>
               </div>
             </div>
@@ -517,14 +511,12 @@
                   </div>
                 </div>
                 <div class="back">
-                  To be eligible for duty drawback, goods must meet two key criteria:
+                  <p>To be eligible for duty drawback, goods must meet two key criteria:</p>
                   <ul class="card-ul">
-                    <li><strong>Non-food products:</strong> Only non-food items qualify for this process.</li>
-                    <li><strong>Dutiable goods:</strong> The items must have a value exceeding €150 in the EU or £125 in
-                      the UK.
-                      This ensures that the goods are subject to import duties at the point of entry, making them
-                      eligible
-                      for a refund when re-exported.
+                    <li><strong>Non-food products:</strong>
+                      Only non-food items qualify for this process.</li>
+                    <li><strong>Dutiable goods:</strong>
+                      The items must have a value exceeding €150 in the EU or £125 in the UK. This ensures that the goods are subject to import duties at the point of entry, making them eligible for a refund when re-exported.</li>
                   </ul>
                 </div>
               </div>
@@ -540,16 +532,13 @@
                   </div>
                 </div>
                 <div class="back">
-                  The entity entitled to claim duty drawback is typically the importer of record—the person or business
-                  responsible for paying duties and taxes at the time of import.
+                  <p>The entity entitled to claim duty drawback is typically the importer of record—the person or business responsible for paying duties and taxes at the time of import.</p>
                   <ul class="card-ul">
-                    <li><strong>In the EU</strong>, the refund is issued by the customs authority in the country where
-                      the goods were
-                      originally imported.</li>
-                    <li> <strong>In the UK</strong>, the process is managed centrally by HMRC (Her Majesty’s Revenue and
-                      Customs). Understanding this distinction is crucial for businesses operating in multiple
-                      jurisdictions.
-                    </li>
+                    <li><strong>In the EU</strong>,
+                      The refund is issued by the customs authority in the country where the goods were originally imported.</li>
+                    <li><strong>In the UK</strong>,
+                      The process is managed centrally by HMRC (Her Majesty’s Revenue and Customs). Understanding this distinction is crucial for businesses operating in multiple jurisdictions.</li>
+                  </ul>
                 </div>
               </div>
             </div>
@@ -564,9 +553,7 @@
                   </div>
                 </div>
                 <div class="back">
-                  <p>The duty drawback process allows businesses to reclaim 100% of the duties and VAT paid at
-                    importation. This full reimbursement can significantly enhance cash flow and profitability,
-                    particularly for businesses managing large-scale or high-value imports and exports.</p>
+                  <p>The duty drawback process allows businesses to reclaim 100% of the duties and VAT paid at importation. This full reimbursement can significantly enhance cash flow and profitability, particularly for businesses managing large-scale or high-value imports and exports.</p>
                 </div>
               </div>
             </div>
@@ -577,17 +564,11 @@
                 <div class="front">
                   <div class="text-wrapper">
                     <i class="bi-arrow-left-right h1 mb-2"></i>
-                    <h3 class="card-title">I import eCom orders to the EU and the UK that sometimes are returned by
-                      buyers. Can I reclaim
-                      import Duties?</h3>
+                    <h3 class="card-title">I import eCom orders to the EU and the UK that sometimes are returned by buyers. Can I reclaim import Duties?</h3>
                   </div>
                 </div>
                 <div class="back">
-                  <p>Yes, it is possible to reclaim customs duties ad VAT, provided certain conditions are met.
-                    Specifically, the item must have been exported from the EU or the UK, and all
-                    relevant documentation, including track-and-trace events and commercial records, must be available.
-                    Additionally, both the import and export declarations need to include detailed information about the
-                    item. Meeting these requirements will allow you to proceed with the Duty Drawback claim.</p>
+                  <p>Yes, it is possible to reclaim customs duties ad VAT, provided certain conditions are met. Specifically, the item must have been exported from the EU or the UK, and all relevant documentation, including track-and-trace events and commercial records, must be available. Additionally, both the import and export declarations need to include detailed information about the item. Meeting these requirements will allow you to proceed with the Duty Drawback claim.</p>
                 </div>
               </div>
             </div>
@@ -603,14 +584,9 @@
                   </div>
                 </div>
                 <div class="back">
-                  <p>As your trusted broker in the EU and the UK, TDR ensures a seamless and integrated duty drawback
-                    process.
-                    Additionally, by supporting your operations globally, TDR facilitates duty drawback and duty-free
-                    importation worldwide, helping you reclaim duties at every possible point in your supply chain.
-                    Discover <a class="text-decoration-underline" href="https://tradedutyrefund.com/">more ways TDR can
-                      enhance your cash flow</a> and benefit
-                    your organization.
-                  </p>
+                  <p>As your trusted broker in the EU and the UK, TDR ensures a seamless and integrated duty drawback process.<br> Additionally, by supporting your operations globally, TDR facilitates duty drawback and duty-free importation worldwide, helping you reclaim duties at every possible point in your supply chain. <a class="text-decoration-underline"
+                      href="https://tradedutyrefund.com/">Discover more ways TDR can enhance your cash flow</a>
+                    and benefit your organization.</p>
                 </div>
               </div>
             </div>
@@ -649,52 +625,51 @@
             <div class="heading-block border-bottom-0 mb-3">
               <h2 class="text-darkBlue">How Seamless Duty Refund Works</h2>
             </div>
-            <p class="text-muted mb-0">Reclaim what’s yours – Effortlessly recover Customs duties with Trade
-              Duty
-              Refund.</p>
+            <p class="text-muted mb-0">Reclaim what’s yours – Effortlessly recover Customs duties with Trade Duty Refund.</p>
           </div>
         </div>
         <div class="clear"></div>
         <div class="row justify-content-around">
           <div class="col-lg-3 col-md-4 mt-5">
             <div class="feature-text">
-              <div class="fbox-text text-darkBlue">1.</div>
+              <div class="fbox-text text-darkBlue">1</div>
               <h3 class="text-darkBlue">Choose TDR as Your Broker of Choice.</h3>
             </div>
             <p>Inform your current carriers to designate TDR as your preferred export and import broker.</p>
           </div>
           <div class="col-lg-3 col-md-4 mt-5">
             <div class="feature-text">
-              <div class="fbox-text text-darkBlue">2.</div>
+              <div class="fbox-text text-darkBlue">2</div>
               <h3 class="text-darkBlue">We Handle Carrier Connections.</h3>
             </div>
-            <p>If not already linked with your carrier, TDR will establish the necessary data exchange to manage
-              clearances.</p>
+            <p>If not already linked with your carrier, TDR will establish the necessary data exchange to manage clearances.</p>
           </div>
           <div class="col-lg-3 col-md-4 mt-5">
             <div class="feature-text">
-              <div class="fbox-text text-darkBlue">3.</div>
+              <div class="fbox-text text-darkBlue">3</div>
               <h3 class="text-darkBlue">Keep Shipping – We Do the Rest.</h3>
             </div>
-            <p>Ship as usual while TDR manages inbound and outbound clearances, reclaiming duties at every
-              opportunity.</p>
+            <p>Ship as usual while TDR manages inbound and outbound clearances, reclaiming duties at every opportunity.</p>
           </div>
         </div>
       </div>
     </div>
 </section>
 
-    </section><!-- #content end -->
+    </section>
+    <!-- #content end -->
     <section id="content">
   <div class="content-wrap">
     <div class="container">
 
       <div class="promo shadow-sm text-center p-5 p-md-6 border rounded-5 mb-5">
-        <h2 class="mb-1 h2">Eager to start saving big?</span></h2>
+        <h2 class="mb-1 h2">Eager to start saving big?</h2>
         <h3 class="mb-4 fw-medium">You're just one click away.</h3>
-        <a href="send-us-a-message.html" class="button button-large button-rounded text-white">Send Us A
+        <div class="btn-group" role="group" aria-label="Contact Us Button Group" <a href="send-us-a-message.html"
+          class="button button-large button-rounded text-white">Send Us A
           Message</a>
-        <a href="make-an-appointment.html" class="button button-large button-rounded text-white">Let's Talk!</a>
+          <a href="make-an-appointment.html" class="button button-large button-rounded text-white">Let's Talk!</a>
+        </div>
       </div>
 
     </div>
@@ -705,6 +680,7 @@
   #footer {
     --cnvs-socialicon-color: @@text-color;
     --cnvs-footer-bg: var(--darkBlue);
+    z-index: 10;
   }
 
   .dark #copyrights,
