--- a/TDR-Duty-Free-Returns-to-Europe.html
+++ b/TDR-Duty-Free-Returns-to-Europe.html
@@ -174,7 +174,8 @@
 
 </head>
 
-<body class="stretched darkBlue-background page-transition" data-loader="2" data-animation-in="fadeIn" data-speed-in="1500" data-animation-out="fadeOut" data-speed-out="800">
+<body class="stretched darkBlue-background page-transition" data-loader="2" data-animation-in="fadeIn"
+  data-speed-in="1500" data-animation-out="fadeOut" data-speed-out="800">
   <div id="wrapper">
     <!-- Only Required if Icons are shown on page -->
 <!-- Font Icons Start -->
@@ -279,22 +280,22 @@
               <ul class="sub-menu-container">
                 <li class="menu-item">
                   <a class="menu-link" href="TDR-Duty-Drawback-in-the-US.html">
-                    <div>Duty Drawback in the US</div>
+                    <div>TDR US Duty Drawback</div>
                   </a>
                 </li>
                 <li class="menu-item">
                   <a class="menu-link" href="TDR-Duty-Drawback-in-Europe.html">
-                    <div>Duty Drawback in Europe</div>
+                    <div>TDR Europe Duty Drawback</div>
                   </a>
                 </li>
                 <li class="menu-item">
                   <a class="menu-link" href="TDR-Duty-Free-Returns-to-the-US.html">
-                    <div>Duty-Free Returns to the US</div>
+                    <div>TDR Duty-Free Returns to the US</div>
                   </a>
                 </li>
                 <li class="menu-item">
                   <a class="menu-link" href="TDR-Duty-Free-Returns-to-Europe.html">
-                    <div>Duty-Free Returns to Europe</div>
+                    <div>TDR Duty-Free Returns to Europe</div>
                   </a>
                 </li>
               </ul>
@@ -382,9 +383,7 @@
     <section id="content" class="darkBlue-background">
       <div class="content-wrap">
         <div class="container">
-
           <div class="block-hero-25">
-
             <div class="row align-items-lg-center gutter-50">
               <div class="col-lg-6">
                 <svg width="100%" viewBox="0 0 618.78137 112.40881" version="1.1" id="SVGDutyFreeReturnsToEurope"
@@ -471,41 +470,30 @@
   startAnimation()
 </script>
               </div>
-
               <div class="col-lg-6 align-self-center">
                 <h1 class="h1 fw-semibold lh-X mb-5">Reduce the impact of e-commerce return costs.</h1>
-
               </div>
             </div>
-
           </div>
-
         </div>
         <!-- Feature boxes start -->
-
         <div class="container">
           <div class="css-grid">
-
             <!-- Card 1-->
             <div class="flip-card-2">
               <div class="flip-card-2-inner">
                 <div class="front">
                   <div class="text-wrapper">
                     <i class="bi-question-circle h1 mb-2"></i>
-                    <h3 class="card-title">What is TDR Duty-Free Returns to Europe</h3>
+                    <h3 class="card-title">What is
+                      TDR Duty-Free Returns to Europe</h3>
                   </div>
                 </div>
                 <div class="back">
-                  <p>TDR Duty-Free Returns to Europe allows businesses to reclaim goods that were previously
-                    exported
-                    without having to pay import duties upon their return. Essentially, if goods sold internationally
-                    are returned, they can re-enter the UK or EU duty-free under certain conditions.
-                    This process simplifies returns for merchants, reducing financial losses and administrative burdens.
-                  </p>
+                  <p>TDR Duty-Free Returns to Europe allows businesses to reclaim goods that were previously exported without having to pay import duties upon their return. Essentially, if goods sold internationally are returned, they can re-enter the UK or EU duty-free under certain conditions. This process simplifies returns for merchants, reducing financial losses and administrative burdens.</p>
                 </div>
               </div>
             </div>
-
             <!-- Card 2-->
             <div class="flip-card-2">
               <div class="flip-card-2-inner">
@@ -516,23 +504,21 @@
                   </div>
                 </div>
                 <div class="back">
-                  To qualify for duty-free returns, goods must meet the following criteria:
+                  <p>To qualify for duty-free returns, goods must meet the following criteria:</p>
                   <ul class="card-ul">
-                    <li><strong>Previously exported goods:</strong> The items must have been originally exported from
-                      the UK or EU.</li>
-                    <li><strong>Unaltered condition:</strong> The goods should be returned in the same condition as when
-                      exported, meaning no repairs or modifications were made while abroad</li>
-                    <li><strong>Ownership continuity:</strong> The goods must remain under the ownership of the same
-                      entity that originally
-                      exported them.</li>
-                    <li><strong>Time Limit:</strong> Goods must return to the EU or UK within 3 years.</li>
-                    Examples include:Unused clothing returned to online fashion retailers, consumer electronics returned
-                    due to buyer dissatisfaction or wrong orders, defective goods sent back for replacement.
+                    <li><strong>Previously exported goods:</strong>
+                      The items must have been originally exported from the UK or EU.</li>
+                    <li><strong>Unaltered condition:</strong>
+                      The goods should be returned in the same condition as when exported, meaning no repairs or modifications were made while abroad.</li>
+                    <li><strong>Ownership continuity:</strong>
+                      The goods must remain under the ownership of the same entity that originally exported them.</li>
+                    <li><strong>Time Limit:</strong>
+                      Goods must return to the EU or UK within 3 years.</li>
                   </ul>
+                  <p>Examples include: Unused clothing returned to online fashion retailers, consumer electronics returned due to buyer dissatisfaction or wrong orders, defective goods sent back for replacement.</p>
                 </div>
               </div>
             </div>
-
             <!-- Card 3-->
             <div class="flip-card-2">
               <div class="flip-card-2-inner">
@@ -543,27 +529,21 @@
                   </div>
                 </div>
                 <div class="back">
-                  TDR Duty-Free Returns to Europe is particularly beneficial for:
+                  <p>Duty-Free Returns to Europe is particularly beneficial for:</p>
                   <ul class="card-ul">
-                    <li><strong>eCommerce merchants:</strong> Businesses selling goods internationally can avoid
-                      additional taxes on returned
-                      items.</li>
-                    <li> <strong>Third-party logistics providers (3PLs):</strong> Companies managing returns for
-                      merchants can streamline their
-                      customs process.
-                    </li>
-                    <li> <strong>Retailers and exporters:</strong> Any company exporting goods that might be returned by
-                      customers.
-                    </li>
+                    <li><strong>eCommerce merchants:</strong>
+                      Businesses selling goods internationally can avoid additional taxes on returned items.</li>
+                    <li><strong>Third-party logistics providers (3PLs):</strong>
+                      Companies managing returns for merchants can streamline their customs process.</li>
+                    <li><strong>Retailers and exporters:</strong>
+                      Any company exporting goods that might be returned by customers.</li>
                   </ul>
-                  Whether you’re a UK-based business selling to the EU or an EU-based business shipping to global
-                  buyers, TDR Duty-Free Returns to Europe helps protect your profit margins when returns
-                  occur.
-
+                  Whether you’re a UK-based business selling to the EU or an EU-based business shipping to global buyers,
+                  TDR Duty-Free Returns to Europe
+                  helps protect your profit margins when returns occur.
                 </div>
               </div>
             </div>
-
             <!-- Card 4-->
             <div class="flip-card-2">
               <div class="flip-card-2-inner">
@@ -575,33 +555,19 @@
                 </div>
                 <div class="back">
                   <ul class="card-ul">
-                    <li>
-                      <strong>Scenario:</strong>
-                      A EU-based eCommerce store sells luxury handbags internationally. A customer in Canada purchases a
-                      handbag but returns it because the color wasn’t what they expected.
-                    </li>
+                    <li><strong>Scenario:</strong>
+                      A EU-based eCommerce store sells luxury handbags internationally. A customer in Canada purchases a handbag but returns it because the color wasn’t what they expected.</li>
                     <li><strong>Without our solution:</strong>
-                      Upon re-entry to the EU, the merchant might need to pay import duties and VAT on the handbag—even
-                      though it was already exported from the EU.
-                    </li>
-                    <li><strong>With TDR Duty-Free Returns to Europe:</strong>
-                      The merchant's broker applies for duty-free importation by providing proof of the original export
-                      (e.g., commercial invoice
-                      and
-                      shipping documents). Customs verifies the documentation and allows the handbag to re-enter
-                      duty-free.
-                    </li>
-                    <strong>Result:</strong>
-                    The merchant avoids paying unnecessary taxes, ensuring a smoother returns process and preserving
-                    profitability.
+                      Upon re-entry to the EU, the merchant might need to pay import duties and VAT on the handbag—even though it was already exported from the EU.</li>
+                    <li><strong>With Duty-Free Returns to Europe:</strong>
+                      The merchant's broker applies for duty-free importation by providing proof of the original export (e.g., commercial invoice and shipping documents). Customs verifies the documentation and allows the handbag to re-enter duty-free.</li>
                   </ul>
-
-
+                  <strong>Result:</strong>
+                  The merchant avoids paying unnecessary taxes, ensuring a smoother returns process and preserving profitability.
                 </div>
               </div>
             </div>
-
-            <!-- Card 6-->
+            <!-- Card 5-->
             <div class="flip-card-2">
               <div class="flip-card-2-inner">
                 <div class="front">
@@ -612,17 +578,9 @@
                   </div>
                 </div>
                 <div class="back">
-                  <p>As your trusted broker in the EU and the UK, TDR ensures a seamless and integrated duty free return
-                    process. <br>
-                    Specifically, we keep clear records of exports, including commercial invoices and shipping documents
-                    and
-                    submit a claim with customs when goods are returned, demonstrating they meet the eligibility
-                    criteria.<br><br>
-                    Additionally, by supporting your operations globally, TDR facilitates duty drawback and duty-free
-                    importation worldwide, helping you reclaim duties at every possible point in your supply chain.
-                    Discover <a class="text-decoration-underline" href="https://tradedutyrefund.com/">more ways TDR can
-                      enhance your cash flow</a> and benefit
-                    your organization.
+                  <p>As your trusted broker in the EU and the UK, TDR ensures a seamless and integrated duty-free return process. Specifically, we keep clear records of exports, including commercial invoices and shipping documents, and submit a claim with customs when goods are returned, demonstrating they meet the eligibility criteria. Additionally, by supporting your operations globally, TDR facilitates duty drawback and duty-free importation worldwide, helping you reclaim duties at every possible point in your supply chain. Discover <a class="text-decoration-underline"
+                      href="https://tradedutyrefund.com/">more ways TDR can enhance your cash flow</a>
+                    and benefit your organization.
                   </p>
                 </div>
               </div>
@@ -662,52 +620,51 @@
             <div class="heading-block border-bottom-0 mb-3">
               <h2 class="text-darkBlue">How Seamless Duty Refund Works</h2>
             </div>
-            <p class="text-muted mb-0">Reclaim what’s yours – Effortlessly recover Customs duties with Trade
-              Duty
-              Refund.</p>
+            <p class="text-muted mb-0">Reclaim what’s yours – Effortlessly recover Customs duties with Trade Duty Refund.</p>
           </div>
         </div>
         <div class="clear"></div>
         <div class="row justify-content-around">
           <div class="col-lg-3 col-md-4 mt-5">
             <div class="feature-text">
-              <div class="fbox-text text-darkBlue">1.</div>
+              <div class="fbox-text text-darkBlue">1</div>
               <h3 class="text-darkBlue">Choose TDR as Your Broker of Choice.</h3>
             </div>
             <p>Inform your current carriers to designate TDR as your preferred export and import broker.</p>
           </div>
           <div class="col-lg-3 col-md-4 mt-5">
             <div class="feature-text">
-              <div class="fbox-text text-darkBlue">2.</div>
+              <div class="fbox-text text-darkBlue">2</div>
               <h3 class="text-darkBlue">We Handle Carrier Connections.</h3>
             </div>
-            <p>If not already linked with your carrier, TDR will establish the necessary data exchange to manage
-              clearances.</p>
+            <p>If not already linked with your carrier, TDR will establish the necessary data exchange to manage clearances.</p>
           </div>
           <div class="col-lg-3 col-md-4 mt-5">
             <div class="feature-text">
-              <div class="fbox-text text-darkBlue">3.</div>
+              <div class="fbox-text text-darkBlue">3</div>
               <h3 class="text-darkBlue">Keep Shipping – We Do the Rest.</h3>
             </div>
-            <p>Ship as usual while TDR manages inbound and outbound clearances, reclaiming duties at every
-              opportunity.</p>
+            <p>Ship as usual while TDR manages inbound and outbound clearances, reclaiming duties at every opportunity.</p>
           </div>
         </div>
       </div>
     </div>
 </section>
+    </section>
 
-    </section><!-- #content end -->
+    <!-- #content end -->
     <section id="content">
   <div class="content-wrap">
     <div class="container">
 
       <div class="promo shadow-sm text-center p-5 p-md-6 border rounded-5 mb-5">
-        <h2 class="mb-1 h2">Eager to start saving big?</span></h2>
+        <h2 class="mb-1 h2">Eager to start saving big?</h2>
         <h3 class="mb-4 fw-medium">You're just one click away.</h3>
-        <a href="send-us-a-message.html" class="button button-large button-rounded text-white">Send Us A
+        <div class="btn-group" role="group" aria-label="Contact Us Button Group" <a href="send-us-a-message.html"
+          class="button button-large button-rounded text-white">Send Us A
           Message</a>
-        <a href="make-an-appointment.html" class="button button-large button-rounded text-white">Let's Talk!</a>
+          <a href="make-an-appointment.html" class="button button-large button-rounded text-white">Let's Talk!</a>
+        </div>
       </div>
 
     </div>
@@ -718,6 +675,7 @@
   #footer {
     --cnvs-socialicon-color: @@text-color;
     --cnvs-footer-bg: var(--darkBlue);
+    z-index: 10;
   }
 
   .dark #copyrights,
