--- a/about-us.html
+++ b/about-us.html
@@ -205,22 +205,22 @@
               <ul class="sub-menu-container">
                 <li class="menu-item">
                   <a class="menu-link" href="TDR-Duty-Drawback-in-the-US.html">
-                    <div>Duty Drawback in the US</div>
+                    <div>TDR US Duty Drawback</div>
                   </a>
                 </li>
                 <li class="menu-item">
                   <a class="menu-link" href="TDR-Duty-Drawback-in-Europe.html">
-                    <div>Duty Drawback in Europe</div>
+                    <div>TDR Europe Duty Drawback</div>
                   </a>
                 </li>
                 <li class="menu-item">
                   <a class="menu-link" href="TDR-Duty-Free-Returns-to-the-US.html">
-                    <div>Duty-Free Returns to the US</div>
+                    <div>TDR Duty-Free Returns to the US</div>
                   </a>
                 </li>
                 <li class="menu-item">
                   <a class="menu-link" href="TDR-Duty-Free-Returns-to-Europe.html">
-                    <div>Duty-Free Returns to Europe</div>
+                    <div>TDR Duty-Free Returns to Europe</div>
                   </a>
                 </li>
               </ul>
@@ -339,7 +339,6 @@
 									By minimizing import duties on returned goods, we help safeguard your profitability, even in a challenging eCommerce landscape.
 								</li>
 							</ul>
-
 						</div>
 
 						<div class="col-lg-4">
@@ -354,13 +353,10 @@
 								We aim to empower businesses of all sizes to thrive in international markets by offering innovative, compliant, and cost-effective solutions for duty-free returns. We are committed to building long-term partnerships that add value to your operations, helping you stay competitive in an ever-evolving global economy.
 							</p>
 						</div>
-
 						<div class="col-lg-4">
-
 							<div class="heading-block fancy-title border-bottom-0 title-bottom-border">
 								<h4>What we <span>Do</span>.</h4>
 							</div>
-
 							Trade Duty Refund specializes in simplifying the process of duty-free returns for businesses engaged in international trade.
 							<ul>
 								<li>
@@ -381,11 +377,7 @@
 								At Trade Duty Refund, we make international returns simple, efficient, and cost-effective—so you can focus on growing your business.
 							</p>
 						</div>
-
-
-
 					</div>
-
 				</div>
 			</div>
 		</section>
@@ -393,6 +385,7 @@
   #footer {
     --cnvs-socialicon-color: @@text-color;
     --cnvs-footer-bg: var(--samaritan);
+    z-index: 10;
   }
 
   .dark #copyrights,
