--- a/ebook-download-page.html
+++ b/ebook-download-page.html
@@ -208,22 +208,22 @@
               <ul class="sub-menu-container">
                 <li class="menu-item">
                   <a class="menu-link" href="TDR-Duty-Drawback-in-the-US.html">
-                    <div>Duty Drawback in the US</div>
+                    <div>TDR US Duty Drawback</div>
                   </a>
                 </li>
                 <li class="menu-item">
                   <a class="menu-link" href="TDR-Duty-Drawback-in-Europe.html">
-                    <div>Duty Drawback in Europe</div>
+                    <div>TDR Europe Duty Drawback</div>
                   </a>
                 </li>
                 <li class="menu-item">
                   <a class="menu-link" href="TDR-Duty-Free-Returns-to-the-US.html">
-                    <div>Duty-Free Returns to the US</div>
+                    <div>TDR Duty-Free Returns to the US</div>
                   </a>
                 </li>
                 <li class="menu-item">
                   <a class="menu-link" href="TDR-Duty-Free-Returns-to-Europe.html">
-                    <div>Duty-Free Returns to Europe</div>
+                    <div>TDR Duty-Free Returns to Europe</div>
                   </a>
                 </li>
               </ul>
@@ -299,13 +299,17 @@
 				<div class="lightSamaritan-panel-bg rounded-3">
 					<div class="row align-items-center">
 						<div class="col-lg-6 p-5 p-md-6">
+
 							<div class="mb-lg-6">
 								<h1 class="display-6 fw-semibold text-darkSamaritan">Thank you!</h1>
 								<h2 class="display-7 text-darkSamaritan">You can start reading now...</h2>
 								<p>Depending on your browser settings, the file will either open or download.</p>
-								<a class="btn btn-primary" type="button"
-									href="./eBook/TDR eBook_A Practical Guide to Customs Duties on Returns.pdf" download>Open/Download</a>
-								<a class="btn btn-primary" type="button" href="/">Back to Home page</a>
+								<div class="btn-group" role="group" aria-label="Button Group">
+									<a class="btn btn-primary" type="button"
+										href="./eBook/TDR eBook_A Practical Guide to Customs Duties on Returns.pdf"
+										download>Open/Download</a>
+									<a class="btn btn-primary" type="button" href="/">Back to Home page</a>
+								</div>
 							</div>
 						</div>
 						<div class="col-lg-6 p-5 p-md-6">
@@ -321,6 +325,7 @@
   #footer {
     --cnvs-socialicon-color: @@text-color;
     --cnvs-footer-bg: var(--samaritan);
+    z-index: 10;
   }
 
   .dark #copyrights,
