--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
 
 </head>
 
-<body class="stretched">
+<body class="stretched dynamic-background">
 
 	<!-- Document Wrapper
 	============================================= -->
-	<div id="wrapper" class="dynamic-background">
+	<div id="wrapper">
 
 		<!-- Header
 		============================================= -->
@@ -196,22 +196,22 @@
               <ul class="sub-menu-container">
                 <li class="menu-item">
                   <a class="menu-link" href="TDR-Duty-Drawback-in-the-US.html">
-                    <div>Duty Drawback in the US</div>
+                    <div>TDR US Duty Drawback</div>
                   </a>
                 </li>
                 <li class="menu-item">
                   <a class="menu-link" href="TDR-Duty-Drawback-in-Europe.html">
-                    <div>Duty Drawback in Europe</div>
+                    <div>TDR Europe Duty Drawback</div>
                   </a>
                 </li>
                 <li class="menu-item">
                   <a class="menu-link" href="TDR-Duty-Free-Returns-to-the-US.html">
-                    <div>Duty-Free Returns to the US</div>
+                    <div>TDR Duty-Free Returns to the US</div>
                   </a>
                 </li>
                 <li class="menu-item">
                   <a class="menu-link" href="TDR-Duty-Free-Returns-to-Europe.html">
-                    <div>Duty-Free Returns to Europe</div>
+                    <div>TDR Duty-Free Returns to Europe</div>
                   </a>
                 </li>
               </ul>
@@ -292,7 +292,7 @@
 							<a href="solutions-for-eu-shippers.html" class="button-circle">EU</a>
 							<a href="solutions-for-uk-shippers.html" class="button-circle">UK</a>
 							<a href="solutions-for-all-shippers.html" class="button-circle">All</a><br>
-							<span>shippers.</span>
+							<span>shippers</span>
 						</div>
 					</div>
 				</div>
@@ -648,6 +648,7 @@
   #footer {
     --cnvs-socialicon-color: @@text-color;
     --cnvs-footer-bg: #677EC4;
+    z-index: 10;
   }
 
   .dark #copyrights,
