--- a/message-sent-success.html
+++ b/message-sent-success.html
@@ -96,16 +96,16 @@
 
 </head>
 
-<body class="stretched samaritan-background>
+<body class="stretched samaritan-background">
 
 	<!-- Document Wrapper
 	============================================= -->
 	<div id=" wrapper">
 
-	<!-- Header
+		<!-- Header
 		============================================= -->
-	<!-- header -->
-	<!-- Only Required if Icons are shown on page -->
+		<!-- header -->
+		<!-- Only Required if Icons are shown on page -->
 <!-- Font Icons Start -->
 <link rel="preload" href="./css/font-icons.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 <noscript>
@@ -208,22 +208,22 @@
               <ul class="sub-menu-container">
                 <li class="menu-item">
                   <a class="menu-link" href="TDR-Duty-Drawback-in-the-US.html">
-                    <div>Duty Drawback in the US</div>
+                    <div>TDR US Duty Drawback</div>
                   </a>
                 </li>
                 <li class="menu-item">
                   <a class="menu-link" href="TDR-Duty-Drawback-in-Europe.html">
-                    <div>Duty Drawback in Europe</div>
+                    <div>TDR Europe Duty Drawback</div>
                   </a>
                 </li>
                 <li class="menu-item">
                   <a class="menu-link" href="TDR-Duty-Free-Returns-to-the-US.html">
-                    <div>Duty-Free Returns to the US</div>
+                    <div>TDR Duty-Free Returns to the US</div>
                   </a>
                 </li>
                 <li class="menu-item">
                   <a class="menu-link" href="TDR-Duty-Free-Returns-to-Europe.html">
-                    <div>Duty-Free Returns to Europe</div>
+                    <div>TDR Duty-Free Returns to Europe</div>
                   </a>
                 </li>
               </ul>
@@ -291,33 +291,35 @@
   <div class="header-wrap-clone"></div>
 </header> <!-- end of header -->
 
-	<!-- Hero Section
+		<!-- Hero Section
 		============================================= -->
-	<section id="slider" class="slider-element block-hero-19">
+		<section id="slider" class="slider-element block-hero-19">
 
-		<div class="container mt-6">
-			<div class="lightSamaritan-panel-bg rounded-3">
-				<div class="row align-items-center">
-					<div class="col-lg-6 p-5 p-md-6">
-						<div class="mb-lg-6">
-							<h1 class="display-6 fw-semibold text-darkSamaritan">We have received it!</h1>
-							<h2 class="display-7 text-darkSamaritan">Our team will get back to you within 24 business hours</h2>
-							<a class="btn btn-primary" type="button" href="/">Back to Home page</a>
+			<div class="container mt-6">
+				<div class="lightSamaritan-panel-bg rounded-3">
+					<div class="row align-items-center">
+						<div class="col-lg-6 p-5 p-md-6">
+							<div class="mb-lg-6">
+								<h1 class="display-6 fw-semibold text-darkSamaritan">We have received it!</h1>
+								<h2 class="display-7 text-darkSamaritan">Our team will get back to you within 24 business hours</h2>
+								<a class="btn btn-primary" type="button" href="/">Back to home page</a>
+
+							</div>
 						</div>
-					</div>
-					<div class="col-lg-6 p-5 p-md-6">
-						<img src="./images/svg/undraw_opened_re_i38e.svg" alt="">
+						<div class="col-lg-6 p-5 p-md-6">
+							<img src="./images/svg/undraw_opened_re_i38e.svg" alt="">
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
 
-	</section>
+		</section>
 
-	<style>
+		<style>
   #footer {
     --cnvs-socialicon-color: @@text-color;
     --cnvs-footer-bg: var(--samaritan);
+    z-index: 10;
   }
 
   .dark #copyrights,
@@ -358,15 +360,15 @@
 
   </div>
 </footer>
-	<!-- Javascripts
+		<!-- Javascripts
 		============================================= -->
-	<!-- place holder for include('src/blocks/head/cookieConsent/cookieConsentScript.html') -->
+		<!-- place holder for include('src/blocks/head/cookieConsent/cookieConsentScript.html') -->
 
-	<!-- Tawk Chatbox -->
-	<!-- place holder for include('src/blocks/tawk.html') -->
+		<!-- Tawk Chatbox -->
+		<!-- place holder for include('src/blocks/tawk.html') -->
 
-	<!-- Canvas Scripts -->
-	<script src="js/functions.js"></script>
+		<!-- Canvas Scripts -->
+		<script src="js/functions.js"></script>
 </body>
 
 </html>
