--- a/solutions-for-eu-shippers.html
+++ b/solutions-for-eu-shippers.html
@@ -206,22 +206,22 @@
               <ul class="sub-menu-container">
                 <li class="menu-item">
                   <a class="menu-link" href="TDR-Duty-Drawback-in-the-US.html">
-                    <div>Duty Drawback in the US</div>
+                    <div>TDR US Duty Drawback</div>
                   </a>
                 </li>
                 <li class="menu-item">
                   <a class="menu-link" href="TDR-Duty-Drawback-in-Europe.html">
-                    <div>Duty Drawback in Europe</div>
+                    <div>TDR Europe Duty Drawback</div>
                   </a>
                 </li>
                 <li class="menu-item">
                   <a class="menu-link" href="TDR-Duty-Free-Returns-to-the-US.html">
-                    <div>Duty-Free Returns to the US</div>
+                    <div>TDR Duty-Free Returns to the US</div>
                   </a>
                 </li>
                 <li class="menu-item">
                   <a class="menu-link" href="TDR-Duty-Free-Returns-to-Europe.html">
-                    <div>Duty-Free Returns to Europe</div>
+                    <div>TDR Duty-Free Returns to Europe</div>
                   </a>
                 </li>
               </ul>
@@ -440,11 +440,13 @@
     <div class="container">
 
       <div class="promo shadow-sm text-center p-5 p-md-6 border rounded-5 mb-5">
-        <h2 class="mb-1 h2">Eager to start saving big?</span></h2>
+        <h2 class="mb-1 h2">Eager to start saving big?</h2>
         <h3 class="mb-4 fw-medium">You're just one click away.</h3>
-        <a href="send-us-a-message.html" class="button button-large button-rounded text-white">Send Us A
+        <div class="btn-group" role="group" aria-label="Contact Us Button Group" <a href="send-us-a-message.html"
+          class="button button-large button-rounded text-white">Send Us A
           Message</a>
-        <a href="make-an-appointment.html" class="button button-large button-rounded text-white">Let's Talk!</a>
+          <a href="make-an-appointment.html" class="button button-large button-rounded text-white">Let's Talk!</a>
+        </div>
       </div>
 
     </div>
@@ -455,6 +457,7 @@
   #footer {
     --cnvs-socialicon-color: @@text-color;
     --cnvs-footer-bg: var(--samaritan);
+    z-index: 10;
   }
 
   .dark #copyrights,
